--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.19"
