--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,22 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "baseUrl": "src",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/*": [
+        "app/*",
+        "!app/components/*"
+      ],
+      "@components": [
+        "app/components/*"
+      ]
+    }
   }
 }
