--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "ng-http-loader": "3.0.0",
+    "ngx-toastr": "8.10.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
     "zone.js": "^0.8.19"
