--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "ng-http-loader": "3.0.0",
+    "ng-pick-datetime": "^6.0.16",
     "ngx-toastr": "8.10.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.1",
