--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "moment": "^2.24.0",
     "ng-http-loader": "3.0.0",
     "ng-pick-datetime": "^6.0.16",
     "ngx-toastr": "8.10.0",
